# rdk-iarmmgrs

./: CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  build.sh  configure.ac  rdk_build.sh  rdk_env.xml
conf/: deepsleepmgr.path  deepsleepmgr.service  deviceupdatemgr.service  diskmgr.service  dsmgr.service  irmgr.service  mfrmgr.service  pwrmgr.ini  pwrmgr.path  pwrmgr.service  pwrmgr2.conf  pwrmgr2.path  pwrmgr2.service  pwrmgrSwitch.service  start_pwrmgr.sh  sysmgr.service  tr69bus.service  vrexmgr.service
deepsleepmgr/: Makefile  Makefile.am  deepSleepInternal.h  deepSleepMgr.c  deepSleepMgrMain.c  deepsleeplogger.h
deepsleepmgr/include/: resetModes.h
deviceUpdateMgr/: Makefile  Makefile.am  deviceUpdateConfig.json  deviceUpdateMgrMain.cpp  jsonParser.cpp  jsonParser.h  utils.cpp  utils.h
deviceUpdateMgr/include/: deviceUpdateMgr.h  deviceUpdateMgrInternal.h
disk/: Makefile  Makefile.am  diskMgr.c  diskMgrInternal.h  diskMgrMain.c
disk/include/: diskMgr.h
dsmgr/: Makefile  Makefile.am  dsMgr.c  dsMgrHelper.cpp  dsMgrInternal.h  dsMgrMain.c  dsMgrProductTraitsHandler.cpp  dsMgrProductTraitsHandler.h  dsMgrPwrEventListener.c  dsMgrPwrEventListener.h
hal/include/: comcastIrKeyCodes.h  deepSleepMgr.h  plat_deepsleep.h  plat_ir.h  plat_power.h  pwrMgr.h
iarmmgrutil/: iarmcec.c  iarmcec.h
ipk/: control  postinst  prerm
ir/: 59-ir-keyboard.rules  IrInputRemoteKeyCodes.h  IrInputRemoteKeyCodes_SkyQ.h  Makefile  Makefile.am  iarmcec.h  irMgr.c  irMgrInternal.h  irMgrMain.c  plat-ir.c  uinput.c
ir/include/: irMgr.h
maintenance/include/: maintenanceMGR.h
mfr/: Makefile  Makefile.am  mfrMgr.c  mfrMgrInternal.h  mfrMgrMain.c
mfr/common/: Makefile  mfrMgr.c  mfrMgrInternal.h  mfrMgrMain.c
mfr/common/cryptolib/: Makefile  mfrCrypto.c
mfr/common/include/: mfrApi.h  mfrCrypto.h  mfrMgr.h  mfrTypes.h
mfr/common/rpc/cli/: Makefile  mfrCli.c
mfr/common/rpc/srv/: Makefile  mfrSrv.c
mfr/common/test_mfr_client/: Makefile  test_mfr_client.c
mfr/include/: mfrMgr.h  mfrTypes.h  mfr_temperature.h  mfr_wifi_api.h  mfr_wifi_types.h
mfr/test_mfr/: Makefile  mfr_deletePDRI.c  mfr_scrubAllBanks.c  mfr_wifiEraseAllData.c  mfr_wifiGetCredentials.c  mfr_wifiSetCredentials.c  test_mfr_client.c  test_writeImage.c
power/: Makefile  Makefile.am  coldFactoryReset.c  customerReset.c  factoryReset.c  personalityReset.c  productTraits.cpp  productTraits.h  pwrMgr.c  pwrMgrHelper.cpp  pwrMgrInternal.h  pwrMgrMain.c  pwrlogger.h  reset.c  sleepTimer.c  therm_mgr.c  therm_mon.c  wareHouseClear.c  wareHouseReset.c
power/include/: resetModes.h
pwrmgr2/: Makefile  Makefile.am  coldFactoryReset.c  customerReset.c  deepSleep.c  factoryReset.c  iarmcec.c  personalityReset.c  pwrMgr.c  pwrMgrHelper.cpp  pwrMgrInternal.h  pwrMgrMain.c  reset.c  sleepTimer.c  therm_mgr.c  therm_mon.c  userFactoryReset.c  wareHouseClear.c  wareHouseReset.c
pwrmgr2/include/: resetModes.h
pwrstate/: Makefile  Makefile.am  pwrstate_notifier.c
rdmmgr/include/: rdmMgr.h
receiver/include/: receiverMgr.h
sysmgr/: Makefile  Makefile.am  sysMgr.c  sysMgrInternal.h  sysMgrMain.c
sysmgr/include/: sysMgr.h
test/: Makefile  Makefile.am  test_bus_client.c  test_ir_client.c  test_mode_change_client.c  test_pwrMgr.c  test_sys_client.c  test_tr69Bus_agent.c  test_tr69Bus_client.c  test_uinput.c  test_vrex_client.c
tr69Bus/: Makefile  Makefile.am  tr69Bus.cpp  tr69BusInternal.h  tr69BusMain.c
tr69Bus/include/: tr69BusMgr.h
vrexmgr/: Makefile  Makefile.am  iarmStatus.c  iarmStatus.h  jsonParser.cpp  jsonParser.h  test.mak  vrexLogInternal.h  vrexMgr.cpp  vrexMgrInternal.h  vrexMgrMain.cpp  vrexPrefs.json  vrexSession.cpp  vrexSession.h
vrexmgr/include/: vrexMgr.h
vrexmgr/test/src/: iarm_bus.c  test_main.c
